--- a/src/components/Home/Imageslider.css
+++ b/src/components/Home/Imageslider.css
@@ -10,8 +10,9 @@
 }
 #carouselExampleCaptions .carousel-inner .carousel-caption{
     color: white;
-    margin-bottom: 200px;
+    margin-bottom: 150px;
     font-size: 20px;
+    padding: 30px;
 }
 
 #carouselExampleCaptions .carousel-inner .carousel-caption p{
