--- a/src/components/Login/Login.css
+++ b/src/components/Login/Login.css
@@ -18,7 +18,7 @@
 #Login .loginSection #LoginForm .Loginsection{
     display: flex;
     flex-direction: column;
-    padding: 20px;
+    padding: 10px;
 }
 #Login .loginSection #LoginForm .Loginsection label{
     font-weight: 700;
@@ -41,4 +41,9 @@
 #LoginForm .Loginsection .remrmberme label{
     padding: 0 10px;
 
+}
+#LoginForm .Loginsection .msgerror{
+    color: red;
+    font-size: 14px;
+    margin: 5px;
 }
