--- a/src/components/About/AboutContent.css
+++ b/src/components/About/AboutContent.css
@@ -32,3 +32,49 @@
     border-radius: 5px;
     box-shadow: 0 0 5px 0 rgb(134, 116, 116);
 }
+@media screen and (max-width: 1000px) {
+    #AboutContent {
+        flex-direction: column;
+    }
+    #AboutRightBox {
+        width: 100%;
+    }
+    #AboutLeftBox img {
+        width: 100%;
+        height: 90%;
+    }
+    #AboutLeftBox {
+        width: 100%;
+        margin: auto;
+    }
+}
+
+
+@media screen and (max-width: 500px) {
+    #AboutContent {
+        flex-direction: column;
+    }
+    #AboutLeftBox img {
+        width: 341px;
+        height: 296px;
+        margin: 50px auto;
+        display: block;
+
+    }
+    #AboutRightBox {
+        width: 100%;
+    }
+    #AboutContainerMission{
+        flex-direction: column;
+    }
+    #AboutRightBox .aboutHeading {
+        font-size: 25px;
+    }
+    #AboutRightBox p {
+        font-size: 16px;
+    }
+    #AboutLeftBox {
+        width: 100%;
+        margin: auto;
+    }
+}
