--- a/src/components/Home/Gallery.css
+++ b/src/components/Home/Gallery.css
@@ -1,9 +1,13 @@
 #gallery{
-    height: 100%;
-    background-color: rgb(206, 224, 206);
-    padding-bottom: 50px;
     margin-top: -80px;
     margin-bottom: -50px;
+    margin: 30px 0;
+    background-color: #fff;
+}
+.gallerycontnet{
+    height: 100%;
+    background-color: #e8e8e8;
+    padding-bottom: 50px;
 }
 #gallery #Gallerytitle{
     display: flex;
@@ -16,20 +20,47 @@
     padding: 5px 15px;
     letter-spacing: 2px;
     text-transform: uppercase;
-    font-size: 20px;
-    font-weight: 600;
+    font-size: 18px;
+    /* font-weight: 600; */
+    font-family: Verdana, Geneva, Tahoma, sans-serif;
 }
 #gallery #galleryImgs{
     background-color: rgb(0, 0, 0);
     width: 100%;
     margin-top: 20px;
+    display: flex;
+    justify-content: center;
 }
 #gallery img{
-    height: 300px;
+    height: 250px;
     width: 25%;
     transition: .3s;
 }
 #gallery img:hover{
     cursor: pointer;
     opacity: .7;
+}
+@media screen and (max-width: 990px) {
+    #gallery #Gallerytitle{
+        flex-wrap: wrap;
+    }
+    #gallery #galleryImgs{
+        flex-direction: column;
+        align-items: center;
+    }
+    #gallery #galleryImgs img{
+        width: 100%;
+        height: 20%;
+    }
+
+}
+@media screen and (max-width: 500px) {
+    #gallery #galleryImgs{
+        flex-direction: column;
+        align-items: center;
+    }
+    #gallery #galleryImgs img{
+        width: 100%;
+    }
+
 }
