--- a/src/components/Home/Slider.css
+++ b/src/components/Home/Slider.css
@@ -25,7 +25,7 @@ h4 {
 }
 .section{
   height: 100%;
-  margin-top: -100px;
+  margin-top: -30px;
 }
 
 .section-center {
@@ -37,7 +37,7 @@ h4 {
   position: relative;
   display: flex;
   overflow: hidden;
-  height: 110vh;
+  height: 120vh;
 }
 
 article {
@@ -105,6 +105,20 @@ article h4 {
   font-weight: 600;
 }
 
+.section .text{
+  text-align: justify;
+}
+
+#messageslider{
+  width: 100%;
+  background-color: rgb(0, 42, 0);
+}
+.section h2{
+  padding-top: 30px;
+  color: white;
+  letter-spacing: 2px;
+  font-size: 30px;
+}
 @media (min-width: 800px) {
   .text {
     max-width: 45em;
@@ -117,19 +131,28 @@ article h4 {
   }
 }
 
-
-.section .text{
-  text-align: justify;
-}
-
-#messageslider{
-  height: 100%;
-  width: 100%;
-  background-color: rgb(0, 42, 0);
-}
-.section h2{
-  padding-top: 30px;
-  color: white;
-  letter-spacing: 2px;
-  font-size: 30px;
+@media screen and (max-width: 500px) {
+  .text {
+    font-size: 14px;
+  }
+  .person-img {
+    width: 90px;
+    height: 90px;
+  }
+  .section-center {
+    margin-top: 2rem;
+  }
+  .section-center {
+    margin-top: 2rem;
+  }
+  .title {
+    margin-bottom: 1rem;
+  }
+  .section h2 {
+    font-size: 26px;
+  }
+  .section-center {
+    height: 180vh;
+    width: 100%;
+  }
 }
