--- a/src/components/Login/Login.css
+++ b/src/components/Login/Login.css
@@ -11,7 +11,7 @@
 }
 #Login .loginSection #LoginForm{
     width: 600px;
-    background-color: rgba(255, 207, 207, 0.3);
+    background-color: #f2f2f2;
     border-radius: 10px;
     padding: 10px;
 }
@@ -46,4 +46,9 @@
     color: red;
     font-size: 14px;
     margin: 5px;
+}
+@media screen and (max-width: 500px) {
+    #Login .loginSection #LoginForm{
+        width: 350px;
+    }
 }
