--- a/src/components/courses/CoursesFrontPage.css
+++ b/src/components/courses/CoursesFrontPage.css
@@ -1,5 +1,5 @@
 #courseHome{
-    height: 90vh;
+    height: 100vh;
     width: 100%;
     background-color: rgb(0, 0, 15);
     position: relative;
@@ -12,7 +12,6 @@
     top: 0;bottom: 0;right: 0;left: 0;
     background-size: cover;
     background-repeat: no-repeat;
-    background-position-y: -100px;
     opacity: .4;
     z-index: -1;
 }
@@ -56,4 +55,16 @@
     font-family: Arial, Helvetica, sans-serif;
     letter-spacing: 1px;
     color: rgb(0, 0, 0, .7);
+}
+
+@media screen and (max-width: 1000px) {
+    #CoursesDiscription .courseDisContent {
+        width: 80%;
+    }
+    #courseHome #headingCourses {
+        margin-top: 35%;
+    }
+    #courseHome{
+        top: -50px;
+    }
 }
